--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.21",
     "prisma": "^4.3.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.0.4"
   }
 }
