--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/next": "^9.0.0",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
-    "axios": "^0.27.2",
+    "axios": "^1.6.8",
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
-    "next": "12.2.5",
+    "next": "^14.2.3",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
