--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@prisma/client": "^4.3.1",
+    "@prisma/client": "^5.15.0-dev.17",
     "@supabase/supabase-js": "^1.35.6",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^4.24.6",
     "@trpc/client": "^10.11.1",
     "@trpc/next": "^10.11.1",
@@ -28,6 +29,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
@@ -37,14 +39,14 @@
     "superjson": "^1.12.2",
     "victory": "^36.6.7",
     "yup": "^0.32.11",
-    "zod": "^3.21.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.21",
-    "prisma": "^4.3.1",
+    "prisma": "^5.15.0-dev.17",
     "tailwindcss": "^3.2.7"
   }
 }
