--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@prisma/client": "^5.15.0-dev.17",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.15.0",
     "@supabase/supabase-js": "^1.35.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^4.24.6",
@@ -46,7 +47,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.21",
-    "prisma": "^5.15.0-dev.17",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.2.7"
   }
 }
